--- a/cadastro.html
+++ b/cadastro.html
@@ -24,7 +24,7 @@
         
         <div class="header-title">
             <h1>Avalia 360</h1>
-            <p>Sua opinião transforma empresas</p>
+            <p>Sua opinião transforma</p>
         </div>
         
         <a href="index.html" class="logo-link">
