--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <div class="header-title">
             <h1>Avalia 360</h1>
-            <p>Sua opinião transforma empresas</p>
+            <p>Sua opinião transforma</p>
         </div>
         
         <a href="index.html" class="logo-link">
@@ -156,6 +156,6 @@
         </section>
     </main>
 
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
