Pagina de minhas avaliações, avaliação funcional, organização do script

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="index.html"><i class="fas fa-home"></i> Página Inicial</a>
                 <a href="avaliacoes.html"><i class="fas fa-star"></i> Minhas Avaliações</a>
                 <a href="perfil.html"><i class="fas fa-user"></i> Meu Perfil</a>
-                <a href="avaliacao.html"><i class="fas fa-edit"></i> Fazer Avaliação</a>
+                <a href="avaliar.html"><i class="fas fa-edit"></i> Fazer Avaliação</a>
                 <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
                 <a href="cadastro.html"><i class="fas fa-user-plus"></i> Cadastre-se</a>
             </div>
