--- a/avaliacoes.html
+++ b/avaliacoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avalia 360 - Cadastro</title>
+    <title>Avalia 360 - Minhas Avaliações</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -34,32 +34,10 @@
     </header>
 
     <main>
-        <section class="form-container">
-            <h2>Cadastre-se</h2>
-            <form id="cadastroForm">
-                <div class="form-group">
-                    <label for="nome">Nome completo:</label>
-                    <input type="text" id="nome" name="nome" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="senha">Senha:</label>
-                    <input type="password" id="senha" name="senha" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="confirmarSenha">Confirmar senha:</label>
-                    <input type="password" id="confirmarSenha" name="confirmarSenha" required>
-                </div>
-
-                <button type="submit">Cadastrar</button>
-                <p>Já tem uma conta? <a href="login.html">Faça login</a></p>
-            </form>
+        <section>
+            <h2>Minhas Avaliações</h2>
+            <div id="lista-avaliacoes" class="avaliacoes-container"></div>
+            </div>
         </section>
     </main>
 
