--- a/avaliar.html
+++ b/avaliar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avalia 360 - Fazer Avaliação</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="fade-in">
@@ -16,7 +17,7 @@
                 <a href="index.html"><i class="fas fa-home"></i> Página Inicial</a>
                 <a href="avaliacoes.html"><i class="fas fa-star"></i> Minhas Avaliações</a>
                 <a href="perfil.html"><i class="fas fa-user"></i> Meu Perfil</a>
-                <a href="avaliacao.html"><i class="fas fa-edit"></i> Fazer Avaliação</a>
+                <a href="avaliar.html"><i class="fas fa-edit"></i> Fazer Avaliação</a>
                 <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
                 <a href="cadastro.html"><i class="fas fa-user-plus"></i> Cadastre-se</a>
             </div>
